# CogitSec

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml  README.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  rust-ci.yml
src/: main.rs
src/core/: attack.rs  credentials.rs  logger.rs  mod.rs  proxy.rs  report.rs  session.rs  wordlist.rs
src/core/protocols/: ftp.rs  http.rs  mod.rs  mysql.rs  postgres.rs  smb.rs  smtp.rs  ssh.rs
src/core/utils/: mod.rs  network.rs  password.rs
src/gui/: app.rs  dashboard.rs  log_viewer.rs  login_config.rs  mod.rs  protocol_config.rs  statistics.rs  themes.rs  utils.rs  wordlist_manager.rs
