[package]
name = "cogitsec"
version = "0.1.0"
edition = "2021"
authors = ["CogitSec Team"]
description = "Advanced Network Login Cracker with Rust GTK GUI"

[dependencies]
# GUI dependencies
gtk = { version = "0.9.6", package = "gtk4" }
gtk-macros = "0.3.0"

# Core dependencies
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
thiserror = "2.0.12"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.11.8"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9.1"
async-trait = "0.1.73"
dirs = "6.0.0"

# Networking and crypto
ssh2 = "0.9.4"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
mysql = "24.0.0"
postgres = "0.19.5"
ftp = "3.0.1"
rustls = "0.23.26"
lettre = "0.10.4"
md-5 = "0.10.5"
sha2 = "0.10.6"
base64 = "0.22.1"
csv = "1.2.2"

[build-dependencies]
glib-build-tools = "0.20.0"

[[bin]]
name = "cogitsec"
path = "src/main.rs" 